force-app/main/default/objects/Payment_Request_Item__c.object
<CustomObject>
    <fields>
        <fullName>Admission_Category__c</fullName>
        <formula>Course_Attempt__r.Application_Course_Preference__r.Admission_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Invoice_Fund__c</fullName>
        <description>used for grouping in the report</description>
        <formula>Payment_Request__r.Agent_Code__c + &apos;_&apos; + Invoice_No__c + &apos;_&apos; +  Fund_Code__c</formula>
        <label>Agent Invoice Fund Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Payable_GST_Inclusive__c</fullName>
        <formula>Payment_Request__r.Calculated_Payable_GST_Inclusive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Payable / GST Inclusive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <formula>Course_Attempt__r.Application_Course_Preference__r.Commencement_Period__c</formula>
        <label>Calendar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Centre_Code__c</fullName>
        <description>Auto populated via trigger when Course Attempt is associated to the record. The purpose for storing is for future audit purpose when Cost Centre Code may change in the future</description>
        <label>Cost Centre Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Attempt_Available__c</fullName>
        <formula>IF(  ISBLANK(Course_Attempt__c) , false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Attempt Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Attempt__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course Attempt</label>
        <referenceTo>Course_Attempt__c</referenceTo>
        <relationshipLabel>Payment Request Items</relationshipLabel>
        <relationshipName>Payment_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <formula>Course_Attempt__r.Course_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <formula>Course_Attempt__r.Course_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <formula>Course_Attempt__r.Course__c</formula>
        <label>Course</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <description>Auto populated via trigger when Course Attempt is associated to the record. The purpose for storing is for reporting and future audit purpose when the mapping might change in the future.</description>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monash College</fullName>
                </value>
                <value>
                    <fullName>Monash University</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>MUFY to Bachelor</fullName>
                </value>
                <value>
                    <fullName>Diploma to Bachelor</fullName>
                </value>
                <value>
                    <fullName>Package 3</fullName>
                </value>
                <value>
                    <fullName>Partial Fee</fullName>
                </value>
                <value>
                    <fullName>VTAC - Vic</fullName>
                </value>
                <value>
                    <fullName>VTAC - Interstate</fullName>
                </value>
                <value>
                    <fullName>US Citizen Service Fee</fullName>
                </value>
                <value>
                    <fullName>Study Abroad Fee</fullName>
                </value>
                <value>
                    <fullName>Incentive Fee</fullName>
                </value>
                <value>
                    <fullName>Other - Undefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fund_Code__c</fullName>
        <description>Auto populated via trigger when Course Attempt is associated to the record. The purpose for storing is for future audit purpose when Fund Code mapping may change in the future</description>
        <label>Fund Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Amount_Field__c</fullName>
        <label>GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_GST_Inclusive__c</fullName>
        <formula>IF( Payment_Request__r.GST_Inclusive__c , true, false)</formula>
        <label>GST Inclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <formula>Payment_Request__r.Invoice_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payable_AmountGST__c</fullName>
        <label>Payable Amount GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payable_Amount_Ex_GST__c</fullName>
        <label>Payable Amount (Ex GST)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payable_Amount_Excl_GST__c</fullName>
        <formula>Payable_Amount__c - Payable_Amount_GST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payable Amount (Excl GST)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payable_Amount_GST__c</fullName>
        <description>GST Amount for Payable Amount. Current assumption is always 10%</description>
        <formula>IF(Invoice_GST_Inclusive__c , Payable_Amount__c - (Payable_Amount__c / 1.1) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payable Amount GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payable_Amount__c</fullName>
        <label>Payable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Request_Type__c</fullName>
        <formula>Payment_Request__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Request__c</fullName>
        <label>Payment Request</label>
        <referenceTo>Payment_Request__c</referenceTo>
        <relationshipLabel>Payment Request Items</relationshipLabel>
        <relationshipName>Payment_Request_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ready_for_Approval__c</fullName>
        <description>boolean to indicate if all the relevant fields needed for approval are populated</description>
        <formula>IF( ISBLANK(Cost_Centre_Code__c) , false,  IF( ISBLANK(Fund_Code__c) , false,  IF( ISBLANK( TEXT(Entity__c)) , false,  IF( ISBLANK( SAP_Vendor_Id__c ) , false, true) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_AmountGST__c</fullName>
        <description>The GST for the requested amount</description>
        <label>Requested Amount GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Amount_Ex_GST__c</fullName>
        <description>Requested Amount Exclusive of GST. User receives ex GST amount on the invoice at the payment item level per student</description>
        <label>Requested Amount (Ex GST)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAP_Vendor_Id__c</fullName>
        <formula>Payment_Request__r.Account__r.SAP_Vendor_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Vendor Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <formula>TEXT(Course_Attempt__r.Application_Course_Preference__r.Course_Offering__r.Academic_Year__c) &amp; &quot; &quot; &amp; Course_Attempt__r.Application_Course_Preference__r.Course_Offering__r.Admission_Calendar_Type__c</formula>
        <label>Semester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entered</fullName>
                    <default>true</default>
                    <label>Entered</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Awaiting Census</fullName>
                </value>
                <value>
                    <fullName>Not Enrolled</fullName>
                </value>
                <value>
                    <fullName>In Dispute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Country_of_Birth__c</fullName>
        <formula>TEXT(Student__r.Country_Of_Birth__c)</formula>
        <label>Student Country of Birth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <formula>Student__r.Person_ID_unique__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <formula>Student__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Request Items</relationshipLabel>
        <relationshipName>Payment_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_Country__c</fullName>
        <formula>Course_Attempt__r.Application_Course_Preference__r.Submission_location__c</formula>
        <label>Submission Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <formula>IF( Invoice_GST_Inclusive__c , &apos;P1&apos;, &apos;P0&apos;)</formula>
        <label>Tax Code</label>
        <type>Text</type>
    </fields>
    <label>Payment Request Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Payment_Request_Type__c</columns>
        <columns>Invoice_No__c</columns>
        <columns>Student__c</columns>
        <columns>Student_Id__c</columns>
        <columns>Requested_Amount__c</columns>
        <columns>Invoice_GST_Inclusive__c</columns>
        <columns>Payable_Amount__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ready_for_Submission</fullName>
        <columns>NAME</columns>
        <columns>Payable_Amount__c</columns>
        <columns>Tax_Code__c</columns>
        <columns>SAP_Vendor_Id__c</columns>
        <columns>Invoice_No__c</columns>
        <columns>Payment_Request__c</columns>
        <columns>Student__c</columns>
        <columns>Student_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>Ready for Submission</label>
    </listViews>
    <nameField>
        <displayFormat>PRI-{000000000}</displayFormat>
        <label>Payment Request Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validation_on_Verify</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED( Status__c ),  TEXT(Status__c) = &apos;Verified&apos;, NOT(Ready_for_Approval__c))</errorConditionFormula>
        <errorMessage>Please check that all the financial code fields have been populated</errorMessage>
    </validationRules>
</CustomObject>